--- a/_posts/2019-07-03-the-us-narrative-today.html
+++ b/_posts/2019-07-03-the-us-narrative-today.html
@@ -946,107 +946,107 @@ stories:
   domain: http://www.dailybulletin.com/
   link: https://www.dailybulletin.com/2019/07/02/grieving-angels-return-to-action-with-emotional-victory-over-rangers/
 images:
-- name: store-on-corner-oldcabin-cinnamon-rolls.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/store-on-corner-oldcabin-cinnamon-rolls.jpg
-- name: cargo-ship-cargo-ship-on-sea-crafty-painting.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/cargo-ship-cargo-ship-on-sea-crafty-painting.jpg
-- name: soldier-kneeling-26304845730-d4e495e25f-o-sunday.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/soldier-kneeling-26304845730-d4e495e25f-o-sunday.jpg
-- name: adam-smith-adam-smith-really-hot.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/adam-smith-adam-smith-really-hot.jpg
-- name: castle-on-hill-castle-on-hill-edinburgh-green-zuma.JPG
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/castle-on-hill-castle-on-hill-edinburgh-green-zuma.JPG
-- name: lost-angeles-downtown-freeway-los-angeles-downtow-freeway-emily-carr.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/lost-angeles-downtown-freeway-los-angeles-downtow-freeway-emily-carr.jpg
-- name: server-cloud-server-racks-clouds-gred-mash.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/server-cloud-server-racks-clouds-gred-mash.jpg
-- name: beach-clouds-lifeguard-beachclouds-aqua.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/beach-clouds-lifeguard-beachclouds-aqua.jpg
-- name: aws-s3-stories-new-68-113-800-500-0-max-0--1--1.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/aws-s3-stories-new-68-113-800-500-0-max-0--1--1.jpg
-- name: castle-on-hill-castle-on-hill-edinburgh-pablo-blue.JPG
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/castle-on-hill-castle-on-hill-edinburgh-pablo-blue.JPG
-- name: blossombar-rainbow-festival-file-00-00-24-99.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/blossombar-rainbow-festival-file-00-00-24-99.jpg
-- name: sand-hand-sand-hand-pablo-blue.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/sand-hand-sand-hand-pablo-blue.jpg
-- name: downtheline-downtheline-mucha-mult.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/downtheline-downtheline-mucha-mult.jpg
-- name: beach-rocks-beach-rocks-currents-propaganda-leaflets.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/beach-rocks-beach-rocks-currents-propaganda-leaflets.jpg
-- name: supreme-court-supremecourt-wols.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/supreme-court-supremecourt-wols.jpg
-- name: old-barn-old-barn-1500-crafty-painting.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/old-barn-old-barn-1500-crafty-painting.jpg
-- name: rockingchair-rockingchair-satan-red.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/rockingchair-rockingchair-satan-red.jpg
-- name: dragon-desert-desert-dragon-ww2-dresden.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/dragon-desert-desert-dragon-ww2-dresden.jpg
-- name: liberty-back-statue-liberty-back-emily-carr.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/liberty-back-statue-liberty-back-emily-carr.jpg
-- name: old-gas-pumps-oldgaspumps-ww2-dresden.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/old-gas-pumps-oldgaspumps-ww2-dresden.jpg
-- name: windowmountain-window-mountain-marcel-duchamp.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/windowmountain-window-mountain-marcel-duchamp.jpg
-- name: redondo-beach-harbor-redondo-beach-harbor-attack-planes.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/redondo-beach-harbor-redondo-beach-harbor-attack-planes.jpg
-- name: windowmountain-window-mountain-yellow-collage.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/windowmountain-window-mountain-yellow-collage.jpg
-- name: legal-statue-legalstatue-creativity.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/legal-statue-legalstatue-creativity.jpg
-- name: status-berlin-status-berlin-dali-two.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/status-berlin-status-berlin-dali-two.jpg
-- name: downtown-los-angeles-downtown-la-rainbow-festival.JPG
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/downtown-los-angeles-downtown-la-rainbow-festival.JPG
-- name: statue-of-liberty-front-view-statueofliberty-atari-missle.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/statue-of-liberty-front-view-statueofliberty-atari-missle.jpg
-- name: downtown-trucksilo-spagetti-accident.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/downtown-trucksilo-spagetti-accident.jpg
-- name: old-church-oldchurch-internet-numbers.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/old-church-oldchurch-internet-numbers.jpg
-- name: white-house-lawn-white-house-window-attack-planes.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/white-house-lawn-white-house-window-attack-planes.jpg
-- name: soldiers-talking-34536952486-52cd6bb1d1-h-colorful-dream.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/soldiers-talking-34536952486-52cd6bb1d1-h-colorful-dream.jpg
-- name: curtain-curtain-graham-sutherland.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/curtain-curtain-graham-sutherland.jpg
-- name: cannon-facing-cannon-crafty-painting.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/cannon-facing-cannon-crafty-painting.jpg
-- name: berlinwall-DSC-0084-cinnamon-rolls.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/berlinwall-DSC-0084-cinnamon-rolls.jpg
-- name: old-church-oldchurch-space-pizza.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/old-church-oldchurch-space-pizza.jpg
-- name: ellis-island-ellis-island-room-nazi-poster.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/ellis-island-ellis-island-room-nazi-poster.jpg
-- name: yuma-bank-yuma-bak-blue-circuit-4.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/yuma-bank-yuma-bak-blue-circuit-4.jpg
-- name: gypsy-wagon-gypsywagon-dark-soul.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/gypsy-wagon-gypsywagon-dark-soul.jpg
-- name: art-museum-art-museum-dali-three.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/art-museum-art-museum-dali-three.jpg
-- name: beach-rocks-beach-rocks-currents-purple-pond.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/beach-rocks-beach-rocks-currents-purple-pond.jpg
-- name: old-door-lock-old-door-lock-yellow-collage.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/old-door-lock-old-door-lock-yellow-collage.jpg
-- name: los-angeles-from-observatory-losangeles-from-observatory-gred-mash.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/los-angeles-from-observatory-losangeles-from-observatory-gred-mash.jpg
-- name: old-cabin-oldcabin-alien-goggles.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/old-cabin-oldcabin-alien-goggles.jpg
-- name: old-barn-old-barn-1500-purp-paper.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/old-barn-old-barn-1500-purp-paper.jpg
-- name: legal-statue-legalstatue-smooth-ride.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/legal-statue-legalstatue-smooth-ride.jpg
-- name: oldhotel-oldhotel-neo-instinct.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/oldhotel-oldhotel-neo-instinct.jpg
-- name: cyber-api-description-wars-img-1910.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/cyber-api-description-wars-img-1910.jpg
-- name: stories-cyril-e-power-the-tube-train-nighttime-in-paris-1.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/stories-cyril-e-power-the-tube-train-nighttime-in-paris-1.jpg
-- name: fence-fence-yellow-collage.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/fence-fence-yellow-collage.jpg
-- name: rockingchair-rockingchair-dali-three.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/rockingchair-rockingchair-dali-three.jpg
-- name: subway-subway-purple-storm.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/subway-subway-purple-storm.jpg
+- name: liberty-back-statue-liberty-back-alien-goggles.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/liberty-back-statue-liberty-back-alien-goggles.jpg
+- name: old-door-lock-old-door-lock-matrix.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/old-door-lock-old-door-lock-matrix.jpg
+- name: mosaic-face-mosaic-face-ww2-dresden.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/mosaic-face-mosaic-face-ww2-dresden.jpg
+- name: amusement-park-amusement-park-2-green-zuma.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/amusement-park-amusement-park-2-green-zuma.jpg
+- name: trucksilo-trucksilo-marcel-duchamp.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/trucksilo-trucksilo-marcel-duchamp.jpg
+- name: server-cloud-server-racks-clouds-post-modern.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/server-cloud-server-racks-clouds-post-modern.jpg
+- name: school-clouds-church-clouds-colorful-blocks.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/school-clouds-church-clouds-colorful-blocks.jpg
+- name: beach-rocks-beach-rocks-currents-gan-vogh.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/beach-rocks-beach-rocks-currents-gan-vogh.jpg
+- name: eduardo-eduardo-purple-storm.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/eduardo-eduardo-purple-storm.jpg
+- name: abe-lincoln-one-purp-paper-file-00-00-07-91.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/abe-lincoln-one-purp-paper-file-00-00-07-91.jpg
+- name: fence-mexico-wols.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/fence-mexico-wols.jpg
+- name: old-door-lock-old-door-lock-mucha-mult.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/old-door-lock-old-door-lock-mucha-mult.jpg
+- name: sand-hand-sand-hand-cinnamon-rolls.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/sand-hand-sand-hand-cinnamon-rolls.jpg
+- name: berlinwall2-berlinwall-purple-storm.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/berlinwall2-berlinwall-purple-storm.jpg
+- name: curtain-curtain-crabapple.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/curtain-curtain-crabapple.jpg
+- name: beach-rocks-beach-rocks-currents-far-away.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/beach-rocks-beach-rocks-currents-far-away.jpg
+- name: aws-s3-stories-new-32-161-800-500-0-max-0--5--1.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/aws-s3-stories-new-32-161-800-500-0-max-0--5--1.jpg
+- name: sand-hand-sand-hand-blue-circuit-4.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/sand-hand-sand-hand-blue-circuit-4.jpg
+- name: sand-hand-sand-hand-matrix.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/sand-hand-sand-hand-matrix.jpg
+- name: fast-lights-freeway-redes-fast-flux-623x425-blue-electricity.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/fast-lights-freeway-redes-fast-flux-623x425-blue-electricity.jpg
+- name: pigeons-on-the-ledge-pigeons-on-ledge-gan-vogh.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/pigeons-on-the-ledge-pigeons-on-ledge-gan-vogh.jpg
+- name: oldsmallboat-oldsmallboat-diego-rivera1.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/oldsmallboat-oldsmallboat-diego-rivera1.jpg
+- name: pigeons-on-the-ledge-pigeons-on-ledge-sand-paper.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/pigeons-on-the-ledge-pigeons-on-ledge-sand-paper.jpg
+- name: stories-new-68-113-800-500-0-max-0--1--1.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/stories-new-68-113-800-500-0-max-0--1--1.jpg
+- name: death-valley-death-valley-national-park-wols.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/death-valley-death-valley-national-park-wols.jpg
+- name: fence-fence-ww2-color.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/fence-fence-ww2-color.jpg
+- name: border-fence-border-fence-on-hill-crabapple.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/border-fence-border-fence-on-hill-crabapple.jpg
+- name: eduardo-eduardo-bright-sand.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/eduardo-eduardo-bright-sand.jpg
+- name: school-clouds-church-clouds-monet-one.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/school-clouds-church-clouds-monet-one.jpg
+- name: statue-of-liberty-front-view-statueofliberty-emily-carr.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/statue-of-liberty-front-view-statueofliberty-emily-carr.jpg
+- name: san-francisco-city-bridge-sf-city-bridge-blue-electricity.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/san-francisco-city-bridge-sf-city-bridge-blue-electricity.jpg
+- name: locked-up-steam-lock-up-steam-purp-paper.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/locked-up-steam-lock-up-steam-purp-paper.jpg
+- name: san-francisco-city-bridge-sf-city-bridge-gred-mash.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/san-francisco-city-bridge-sf-city-bridge-gred-mash.jpg
+- name: ellis-island-ellis-island-room-dark-rain.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/ellis-island-ellis-island-room-dark-rain.jpg
+- name: oldhousecars-house-old-cars-dark-dali.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/oldhousecars-house-old-cars-dark-dali.jpg
+- name: beach-clouds-lifeguard-beachclouds-yellow-collage.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/beach-clouds-lifeguard-beachclouds-yellow-collage.jpg
+- name: liberty-back-statue-liberty-back-spagetti-accident.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/liberty-back-statue-liberty-back-spagetti-accident.jpg
+- name: statue-of-liberty-front-view-statueofliberty-copper-circuit-2.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/statue-of-liberty-front-view-statueofliberty-copper-circuit-2.jpg
+- name: abe-lincoln-one-purple-pond-file-00-00-07-91.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/abe-lincoln-one-purple-pond-file-00-00-07-91.jpg
+- name: old-door-lock-old-door-lock-2-dark-rain.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/old-door-lock-old-door-lock-2-dark-rain.jpg
+- name: fence-fence-dry-skin.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/fence-fence-dry-skin.jpg
+- name: oldhousecars-house-old-cars-internet-numbers.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/oldhousecars-house-old-cars-internet-numbers.jpg
+- name: catacombs-catacombs-emily-carr.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/catacombs-catacombs-emily-carr.jpg
+- name: copper-circuit-IMG_7831.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/copper-circuit-IMG_7831.jpg
+- name: soldiers-talking-34536952486-52cd6bb1d1-h-propaganda-leaflets.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/soldiers-talking-34536952486-52cd6bb1d1-h-propaganda-leaflets.jpg
+- name: cargo-ship-cargo-ship-on-sea-hot-spicy.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/cargo-ship-cargo-ship-on-sea-hot-spicy.jpg
+- name: lost-angeles-downtown-freeway-los-angeles-downtow-freeway-blue-circuit-3.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/lost-angeles-downtown-freeway-los-angeles-downtow-freeway-blue-circuit-3.jpg
+- name: mediterranean-mediterranean-crabapple.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/mediterranean-mediterranean-crabapple.jpg
+- name: oldhousecars-house-old-cars-feed-people.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/oldhousecars-house-old-cars-feed-people.jpg
+- name: san-francisco-street-view-san-francisco-street-view-smooth-ride.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/san-francisco-street-view-san-francisco-street-view-smooth-ride.jpg
+- name: san-francisco-skyline-night-san-francisco-skyline-night-purp-paper.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/san-francisco-skyline-night-san-francisco-skyline-night-purp-paper.jpg
 ---
 Logans Law Implemented This Week.&nbsp;Murder Suicide Rocks Community.&nbsp;Independence Day Celebration Tomorrow.&nbsp;Man Allegedly Stole Cars From Those Who Stopped To Help.&nbsp;Maryland Mother Pushes For Screen Time Regulations In Schools.&nbsp;Taylor Swift's Lawyer Insists She Wasn't Given Chance To Buy Music Outright.&nbsp;Trump, California Governor Spar Over Immigrant Health Care.&nbsp;Taylor Swift's Lawyer Insists She Wasn't Given Chance To Buy Music Outright.&nbsp;
